2006-11-09  Per Bothner  <per@bothner.com>

	* MakeAttribute.java: Update for Consumer changes.
	* MakeResponseHeader.java: Likewise.
	* HttpPrinter.java: Likewise.
	* MakeElement.java: Likewise.
	* Nodes.java: Likewise.

2006-11-08  Per Bothner  <per@bothner.com>

	* XMLParser.java: Update for ParsedXMLToConsumer -> XMLFilter rename.

2006-10-31  Per Bothner  <per@bothner.com>

	* XDataType.java (booleanType): Use Type.boolean_type.
	(emitCoerceToObject, emitTestIf): Need special handling for xs:boolean
	since it is a primitive type.

	* NodeType.java (documentNodeTest, textNodeTest, commentNodeTest,
	anyNodeTest): New static fields, moved to XQParser.
	* DescendantOrSelfAxis.java (anyNode): New static field.
	(<init>): New private constructor.
	(make): Return anyNode if appropriate.  Use new constructor.

2006-10-30  Per Bothner  <per@bothner.com>

	* KNode.java (base): New convenience method.

	* ElementType.java (anyElement): New static final field.

2006-10-29  Per Bothner  <per@bothner.com>

	* Notation.java: New class.
	* Makefile.am: Update accordingly.
	* XDataType.java (NotationType): New static field.

2006-10-26  Per Bothner  <per@bothner.com>

	* KNode.java (atomicValue): Don't convert to UntypedAtomic here;
	thatis now handled by NodeTree.typevalue when it is appropriate.

	* MakeElement.java (beginGroup): Copy copyNamespacesMode to output
	Consumer if it is a NodeTree.

	* MakeElement.java (copyNamespacesMode): New field.
	(beginGroup): New copyNamespacesMode parameter.
	(apply, compileToNode): Update appropriately.

	* XmlNamespace.java: Renamed from gnu.kawa.lispexpr.XmlNamespace.
	(XHTML_NAMESPACE): New constant.
	(HTML): Use "" as prefix, to match xhtml recommendation.
	(HTML_BINDINGS): New field.
	(get): Set namespace nodes if this is HTML.
	(readResolve): Fix copy/paste error.
	* Makefile.am: Update accordingly.
	* ElementType.java (namespaceNodes): New field.
	(getNamespaceNodes, setNamespaceNodes): New methods.