@@ -1,3 +1,9 @@
+2006-11-13  Per Bothner  <per@bothner.com>
+
+	* AttributeType.java (getImplementationType): Be more specific.
+	* ElementType.java (getImplementationType): Likewise.
+	* ProcessingInstructionType.java (getImplementationType): Likewise.
+
 2006-11-09  Per Bothner  <per@bothner.com>
 
 	* MakeAttribute.java: Update for Consumer changes.
